--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
   </nav>
   <div id="json-list-container" />
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
