--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
 
+  <title>acquired.fm carve outs</title>
+
   <link rel="stylesheet" href="https://unpkg.com/chota@latest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
