--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     .nav-brand {
       font-size: 2rem;
-      font-weight: semibold;
+      font-weight: 600;
       color: #3fc
     }
 
@@ -56,6 +56,10 @@
       display: grid;
       gap: 1rem;
       grid-template-columns: 1fr;
+    }
+
+    .card h4 {
+      font-weight: 600;
     }
 
     @media (min-width: 768px) {
